--- a/style/style.css
+++ b/style/style.css
@@ -2,18 +2,24 @@
     font-family: "Roboto", sans-serif;
 }
 
+nav {
+    /* background-color: transparent; */
+    transition: 0.3s;
+}
+
 .hero-section .container-fluid::after {
     position: absolute;
     display: block;
     width: 100vw;
     height: 100%;
     content: "";
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
         0,
         rgba(0, 0, 0, 0.7),
         rgba(0, 0, 0, 0),
         rgba(0, 0, 0, 0.7)
-    );
+    ); */
+    background-color: rgba(255, 255, 255, 0.5);
     top: 0;
 }
 
@@ -49,7 +55,6 @@ hr {
     bottom: 0;
 }
 
-.carousel-caption {
-    /* position: absolute; */
-    /* z-index: 1; */
+.pesan-kesan {
+    white-space: pre;
 }
