--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ section.hero-section .container-fluid::after {
     width: 100vw;
     height: 100%;
     content: "";
-    background-color: rgba(50, 50, 50, 0.5);
+    background-color: rgba(50, 50, 50, 0.5) !important;
     top: 0;
 }
 
