--- a/style/style.css
+++ b/style/style.css
@@ -77,6 +77,11 @@ blockquote p {
     font-size: 1rem;
 }
 
+iframe {
+    width: inherit;
+    height: 50vh;
+}
+
 @media (min-width: 1000px) {
     section.about > .row:last-child > .col:first-child {
         opacity: 0;
@@ -86,5 +91,9 @@ blockquote p {
     section.about > .row:last-child > .col:last-child {
         opacity: 0;
         transform: translate(40px, 0);
+    }
+
+    iframe {
+        height: 80vh;
     }
 }
