--- a/style/style.css
+++ b/style/style.css
@@ -62,17 +62,6 @@ hr {
     cursor: pointer;
 }
 
-.gallery-card {
-    opacity: 0;
-    transform: translate(0, -40px);
-    transition: 1s;
-}
-
-.gallery-card.show {
-    opacity: 1;
-    transform: translate(0, 0);
-}
-
 blockquote p {
     font-size: 1rem;
 }
@@ -83,7 +72,7 @@ iframe {
 }
 
 @media (min-width: 1000px) {
-    section.about > .row:last-child > .col:first-child {
+    /* section.about > .row:last-child > .col:first-child {
         opacity: 0;
         transform: translate(-40px, 0);
     }
@@ -91,9 +80,27 @@ iframe {
     section.about > .row:last-child > .col:last-child {
         opacity: 0;
         transform: translate(40px, 0);
-    }
+    } */
 
     iframe {
         height: 80vh;
     }
 }
+
+/* .gradient-custom {
+    background: radial-gradient(
+            50% 123.47% at 50% 50%,
+            #00ff94 0%,
+            #720059 100%
+        ),
+        linear-gradient(121.28deg, #669600 0%, #ff0000 100%),
+        linear-gradient(360deg, #0029ff 0%, #8fff00 100%),
+        radial-gradient(100% 164.72% at 100% 100%, #6100ff 0%, #00ff57 100%),
+        radial-gradient(100% 148.07% at 0% 0%, #fff500 0%, #51d500 100%);
+    background-blend-mode: screen, color-dodge, overlay, difference, normal;
+} */
+/* .carousel-indicators {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+} */
