--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,5 @@
 * {
     font-family: "Roboto", sans-serif;
-    --swiper-navigation-top-offset: 50vh;
-    --swiper-navigation-color: #6c757d;
-    --swiper-navigation-size: 22px;
 }
 
 body {
@@ -76,6 +73,18 @@ blockquote p {
 iframe {
     width: inherit;
     height: 50vh;
+}
+
+.sambutan-container {
+    --swiper-navigation-top-offset: 50vh;
+    --swiper-navigation-color: #6c757d;
+    --swiper-navigation-size: 22px;
+}
+
+.gallery-container {
+    --swiper-navigation-color: #fff;
+    --swiper-navigation-size: 22px;
+    --swiper-pagination-color: #6c757d;
 }
 
 @media (min-width: 1000px) {
